--- a/checkout/index.html
+++ b/checkout/index.html
@@ -42,7 +42,7 @@
     
 <div class="container">
   <div class="py-5 text-center">
-    <img class="d-block mx-auto mb-4" src="../img/letrav.jpg" alt="" width="72" height="72">
+    <img class="d-block mx-auto mb-4" src="img/letrav.jpg" alt="" width="72" height="72">
     <h2>Checkout</h2>
     <p class="lead">Olá, preencha as informações a baixo e faça suas compras</p>
   </div>
@@ -274,13 +274,13 @@
           </div>
         </div>
         <hr class="mb-4">
-        <button class="btn btn-primary btn-lg btn-block" type="submit">Continuar com a Compra</button>
+        <a href="../file:///C:/Users/Aluno/Downloads/VIDEO%20PARA%20TROLLEAR%20EN%20ZOOM%20ANONYMOUS.mp4" type="submit">Continuar com a Compra</a>
       </form>
     </div>
   </div>
 
   <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mb-1">&copy; 2017-2022 Venancio</p>
+    <p class="mb-1">&copy; 2023 Venancio</p>
     <ul class="list-inline">
       <li class="list-inline-item"><a href="#">Privacy</a></li>
       <li class="list-inline-item"><a href="#">Terms</a></li>
