--- a/pricing/index.html
+++ b/pricing/index.html
@@ -60,14 +60,17 @@
         <h4 class="my-0 font-weight-normal">Bronze</h4>
       </div>
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+        <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ 2y</small></h1>
         <ul class="list-unstyled mt-3 mb-4">
           <li>3 jogos</li>
           <li>Duração de 2 anos cada jogo</li>
           <li>Contato parcial com nosso IA</li>
           <li>Duração de 3 anos o plano </li>
         </ul>
-        <button type="button" class="btn btn-lg btn-block btn-outline-primary">continuar Gratuito</button>
+           <!--
+  <button onclick="login()" class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+  -->
+        <a href="../checkout/index.html"class="btn btn-lg btn-primary btn-block" type="submit">continuar Gratuito</a>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
@@ -75,14 +78,14 @@
         <h4 class="my-0 font-weight-normal">Prata</h4>
       </div>
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">$20 <small class="text-muted">/ mo</small></h1>
+        <h1 class="card-title pricing-card-title">$20 <small class="text-muted">/ 6y</small></h1>
         <ul class="list-unstyled mt-3 mb-4">
           <li>5 jogos</li>
           <li>Duração de 2 anos cada jogo</li>
           <li>Contato direto com nosso IA</li>
           <li>Duração de 6 anos o plano</li>
         </ul>
-        <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+        <a href="../checkout/index.html"class="btn btn-lg btn-primary btn-block" type="submit">Acessar <a>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
@@ -90,7 +93,7 @@
         <h4 class="my-0 font-weight-normal">Ouro</h4>
       </div>
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">$50 <small class="text-muted">/ mo</small></h1>
+        <h1 class="card-title pricing-card-title">$50 <small class="text-muted">/ 10y</small></h1>
         <ul class="list-unstyled mt-3 mb-4">
           <li>15 jogos</li>
           <li>Duração de 5 anos cada jogo</li>
@@ -98,7 +101,7 @@
           <li>Duração de 10 anos o plano</li>
           <li>Possiveis renovações dos jogos</li>
         </ul>
-        <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+        <a href="../checkout/index.html" class="btn btn-lg btn-block btn-primary">Acessar</a>
       </div>
     </div>
   </div>
